test/spec_vectors/simd_f64x2_pmin_pmax/fail/module_9.wat
(module (func (result v128) (f64x2.pmin (i32.const 0) (f32.const 0.0))))